Remove GC logging parameters from default